fix button problems

--- a/app/src/main/res/layout/player.xml
+++ b/app/src/main/res/layout/player.xml
@@ -31,7 +31,7 @@
             android:id="@+id/btPlaylist"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/playlist_button_pressed"
+            android:src="@drawable/playlist_button_states"
             android:scaleType="fitCenter"
             android:adjustViewBounds="true"
             android:background="@null"
@@ -47,24 +47,21 @@
         android:layout_height="0dp"
         android:orientation="vertical"
         android:layout_weight="6"
-        android:background="#FFE0B5">
+        android:background="#EE6055">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/imgThumbnail"
-                android:src="@drawable/thumbnail"
-                android:layout_marginTop="15dp"
-                android:layout_weight="3"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:id="@+id/imgThumbnail"
+            android:src="@drawable/thumbnail"
+            android:layout_marginTop="15dp"
+            android:layout_weight="3"/>
 
         <SeekBar
             android:id="@+id/progressBar"
             android:layout_width="match_parent"
-            android:layout_height="10dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
             android:thumb="@drawable/seekbar_thumb"
             android:progressDrawable="@drawable/seekbar_progress_state"
             android:paddingLeft="6dp"
@@ -81,7 +78,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:id="@+id/imgShuffle"
-                android:src="@drawable/shuffle_button_pressed"
+                android:src="@drawable/shuffle_button_states"
                 android:scaleType="fitCenter"
                 android:adjustViewBounds="true"
                 android:background="@null"
@@ -93,7 +90,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:id="@+id/imgRepeat"
-                android:src="@drawable/repeat_button_pressed"
+                android:src="@drawable/repeat_button_states"
                 android:scaleType="fitCenter"
                 android:adjustViewBounds="true"
                 android:background="@null"
@@ -124,7 +121,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:id="@+id/imgBack"
-                android:src="@drawable/back_button_pressed"
+                android:src="@drawable/back_button_states"
                 android:scaleType="fitCenter"
                 android:adjustViewBounds="true"
                 android:background="@null"
@@ -134,7 +131,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:id="@+id/imgBackwards"
-                android:src="@drawable/backward_button_pressed"
+                android:src="@drawable/backward_button_states"
                 android:scaleType="fitCenter"
                 android:adjustViewBounds="true"
                 android:background="@null"
@@ -144,7 +141,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:id="@+id/imgPlayStop"
-                android:src="@drawable/play_button_pressed"
+                android:src="@drawable/play_button_states"
                 android:scaleType="fitCenter"
                 android:adjustViewBounds="true"
                 android:background="@null"
@@ -154,7 +151,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:id="@+id/imgForward"
-                android:src="@drawable/forward_button_pressed"
+                android:src="@drawable/forward_button_states"
                 android:scaleType="fitCenter"
                 android:adjustViewBounds="true"
                 android:background="@null"
@@ -164,7 +161,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:id="@+id/imgNext"
-                android:src="@drawable/next_button_pressed"
+                android:src="@drawable/next_button_states"
                 android:scaleType="fitCenter"
                 android:adjustViewBounds="true"
                 android:background="@null"
