--- a/app/src/main/res/drawable/shuffle_button_states.xml
+++ b/app/src/main/res/drawable/shuffle_button_states.xml
@@ -8,7 +8,7 @@
         android:state_pressed="true"/>
     <item android:drawable="@drawable/shuffle_button_pressed"
         android:state_focused="true"/>
-    <item android:drawable="@drawable/shuffle_button_states"
+    <item android:drawable="@drawable/shuffle_button"
         android:state_focused="false"
         android:state_pressed="false"/>
 </selector>
