--- a/app/src/main/res/layout/player.xml
+++ b/app/src/main/res/layout/player.xml
@@ -21,7 +21,7 @@
             android:layout_marginStart="10dp"
             android:textStyle="bold"
             android:textSize="10pt"
-            android:text="Times Like These"
+            android:text="@string/song_title"
             android:layout_marginTop="10dp"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"/>
@@ -82,14 +82,14 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/txtCurrentTime"
-                android:text="00:45"
+                android:text="@string/start_time"
                 android:layout_weight="1" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/txtTotalTime"
-                android:text="04:23"
+                android:text="@string/total_time"
                 android:layout_weight="1"
                 android:gravity="right"/>
 
