--- a/app/src/main/res/layout/player.xml
+++ b/app/src/main/res/layout/player.xml
@@ -65,7 +65,7 @@
             android:layout_marginRight="20dp"
             android:layout_marginTop="20dp"
             android:thumb="@drawable/seekbar_thumb"
-            android:progressDrawable="@drawable/seekbar_progress_state"
+            android:progressDrawable="@drawable/custom_seekbar"
             android:paddingLeft="6dp"
             android:paddingRight="6dp" />
 
