--- a/app/src/main/res/layout/player.xml
+++ b/app/src/main/res/layout/player.xml
@@ -50,12 +50,14 @@
         android:background="#EE6055">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:id="@+id/imgThumbnail"
             android:src="@drawable/thumbnail"
             android:layout_marginTop="15dp"
-            android:layout_weight="3"/>
+            android:layout_weight="3"
+            android:layout_marginLeft="80dp"
+            android:layout_marginRight="80dp"/>
 
         <SeekBar
             android:id="@+id/progressBar"
