--- a/app/src/main/res/xml/music_player_widget.xml
+++ b/app/src/main/res/xml/music_player_widget.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:minWidth="146dp"
-    android:updatePeriodMillis="0"
+    android:minWidth="300dp"
+    android:updatePeriodMillis="1000000"
     android:minHeight="48dp"
     android:initialLayout="@layout/widget_layout">
 </appwidget-provider>
