--- a/app/src/main/res/layout/widget_layout.xml
+++ b/app/src/main/res/layout/widget_layout.xml
@@ -2,24 +2,34 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#45F">
+    android:background="@drawable/widget_shape">
 
     <TextView
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:id="@+id/txtWidgetSongTitle"
-        android:text="@string/song_title" />
+        android:text="@string/song_title"
+        android:textSize="8pt"
+        android:layout_gravity="center"
+        android:gravity="center_horizontal|center_vertical"
+        android:layout_weight="8"/>
 
     <ImageView
         android:layout_height="40dp"
         android:layout_width="40dp"
         android:id="@+id/imgWidgetPlay"
-        android:src="@drawable/play_button_states" />
+        android:src="@drawable/play_button_states"
+        android:layout_gravity="center"
+        android:gravity="center_horizontal|center_vertical"
+        android:layout_weight="1"/>
 
     <ImageView
         android:layout_height="40dp"
         android:layout_width="40dp"
         android:id="@+id/imgWidgetNext"
-        android:src="@drawable/next_button_states" />
+        android:src="@drawable/next_button_states"
+        android:layout_gravity="center"
+        android:gravity="center_horizontal|center_vertical"
+        android:layout_weight="1"/>
 
 </LinearLayout>
